# cookiecutter-pypackage

./: .bumpversion.cfg  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .markdownlint_style.rb  .overcommit.yml  .pre-commit-config.yaml  .python-version  .pyup.yml  .readthedocs.yml  .travis-workarounds.sh  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CSCS_VENVS.rst  CSCS_venvs.rst  DEVELOPMENT.md  DockerFile  Gemfile  HISTORY.md  LICENSE  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  README.rst  SECURITY.md  TODO.rst  adasd.yml  app  appveyor.yml  cookiecutter.json  (+29 more)
docs/: Makefile  (+24 more)
mypackage/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  justfile  pyproject.toml
mypackage/.github/: ISSUE_TEMPLATE.md
mypackage/docs/: index.md  installation.md  usage.md
mypackage/tests/: __init__.py  test_MyPackage.py
tests/reference/: README.md  README.rst  pyproject.toml
{{cookiecutter.package_name}}/: .gitignore  .readthedocs.yaml  AUTHORS.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  codecov.yml  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  zensical.toml
{{cookiecutter.package_name}}/.github/: dependabot.yml  pull_request_template.md
{{cookiecutter.package_name}}/CHANGELOG/: {{ cookiecutter.first_version }}.md
{{cookiecutter.package_name}}/docs/: api.md  index.md  installation.md  usage.md
{{cookiecutter.package_name}}/tests/: __init__.py  test_{{cookiecutter.import_name}}.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  _version.py  {{cookiecutter.package_name}}.py
{{cookiecutter.project_dash_slug}}/: .bumpversion.cfg  .codeclimate.yml  .coveragerc  .dockerignore  .env.example  .gitignore  .isort.cfg  Dockerfile  MANIFEST.in  Pipfile  README.md  docker-entrypoint.sh  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_dash_slug}}/.circleci/: config.yml
{{cookiecutter.project_dash_slug}}/test-data/: README.md
{{cookiecutter.project_dash_slug}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_dash_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  settings.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_repo_name}}/: .codacy.yml  .editorconfig  .gitignore  .readthedocs.yml  .scaraplate.conf  .travis.yml  CHANGES.rst  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.rst  docker-compose.yml  environment-docs.yml  environment.yml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_repo_name}}/.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_repo_name}}/docs/: Makefile
{{cookiecutter.project_repo_name}}/etc/: debug.cfg  sample-custom.cfg  sample-postgres.cfg
{{cookiecutter.project_repo_name}}/tests/: common.py  test_wps_caps.py  test_wps_hello.py  test_wps_inout.py  test_wps_sleep.py  test_wps_wordcounter.py
{{cookiecutter.project_repo_name}}/{{cookiecutter.project_slug}}/: __init__.py  __version__.py  cli.py  default.cfg  wsgi.py
{{cookiecutter.project_repo}}/: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  liccheck.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
{{cookiecutter.project_repo}}/.dependabot/: config.yml
{{cookiecutter.project_repo}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_repo}}/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .coveragerc  .coveralls.yml  .dir-locals.el  .docker.cfg  .dockerignore  .editorconfig  .envrc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .mdlrc  .overcommit.yml  .pre-commit-config.yaml  .pylintrc  .python-version  .readthedocs.yml  .style.yapf  .travis.yml  .yamllint.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPMENT.md  Dockerfile  Gemfile  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Makefile.config.example  Pipfile  Procfile  README.md  (+37 more)
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/.dependabot/: config.yml
{{cookiecutter.project_slug}}/.github/: CONTRIBUTE.md  FEATURE_REQUEST.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  bug_report.md  dependabot.yaml
{{cookiecutter.project_slug}}/app/: Procfile  __init__.py  endpoints.py  models.py  requirements.py
{{cookiecutter.project_slug}}/apps/: app1.py  app2.py
{{cookiecutter.project_slug}}/docker/: Dockerfile  README.md  entrypoint.sh
{{cookiecutter.project_slug}}/docs/: .gitignore  Makefile  api_reference.rst  authors.md  authors.rst  changelog.md  conf.py  contributing.md  contributing.rst  header.rst  history.md  how_to_use.rst  index.md  index.rst  installation.md  installation.rst  make.bat  modules.rst  readme.md  readme.rst  requirements.txt  troubleshooting.rst  usage.md  usage.rst  {{cookiecutter.project_slug}}.rst
{{cookiecutter.project_slug}}/etc/: demo.cfg
{{cookiecutter.project_slug}}/metrics/: coverage_high_water_mark  (+1 more)
{{cookiecutter.pypi_package_name}}/: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
{{cookiecutter.repo_name}}/: .coveragerc  .env  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements-documentation.txt  requirements-testing.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py  tube.py  update_pypi_password_for_travis.py  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE {%- endif %}
(+328 files in other folders)
