[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-pypackage"
version = "0.2.0"
description = "Cookiecutter template for a Python package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com" }
]
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]
dependencies = [
    "cookiecutter>=2.6.0",
    "typer>=0.16.0",
    "alabaster>=1.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-cookies",
    "ruff",
    "mypy",  # fixed
    "ipdb"
]
dev = [
    "rust-just>=1.42.4",
]

[project.urls]
homepage = "https://github.com/audreyfeldroy/cookiecutter-pypackage"

[tool.setuptools.packages.find]
where = ["."]
include = ["cookiecutter_pypackage*"]
exclude = ["tests*", "hooks*", "reports*", "docs*"]

[tool.ruff]
exclude = ["{{cookiecutter_pypi_package_name}}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
