[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookiecutter-pypackage"
version = "0.3.1"
description = "Cookiecutter template for a Python package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com" }
]
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]
dependencies = [
    "cookiecutter>=2.6.0",
    "typer>=0.16.0",
    "alabaster>=1.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "pytest-cookies",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"
]

[project.scripts]
cookiecutter-pypackage = "cookiecutter_pypackage.cli:app"

[project.urls]
homepage = "https://github.com/audreyfeldroy/cookiecutter-pypackage"

[tool.ruff]
exclude = [
    "*cookiecutter.pypi_package_name*"
    ]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "rust-just>=1.42.4",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "cookiecutter.json",
    "hooks/",
    "{{cookiecutter.pypi_package_name}}/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cookiecutter_pypackage"]

[tool.hatch.build.targets.wheel.force-include]
"cookiecutter.json" = "cookiecutter_pypackage/template/cookiecutter.json"
"hooks" = "cookiecutter_pypackage/template/hooks"
"{{cookiecutter.pypi_package_name}}" = "cookiecutter_pypackage/template/{{cookiecutter.pypi_package_name}}"