[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis@protonmail.com
name = cookiecutter-pymod
long_description = README.md
long_description_content_type = text/markdown
packages =
description = Cookiecutter template for a Python package
license = BSD
license_file = LICENSE
url= https://github.com/ashwinvis/cookiecutter-pymod
keywords= cookiecutter, template, package
classifiers =
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Natural Language :: English
        License :: OSI Approved :: BSD License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: Implementation :: CPython
        Programming Language :: Python :: Implementation :: PyPy
        Topic :: Software Development
setup_requires =
    setuptools>=39.2.0
    setuptools_scm

[options]
python_requires = >= 3.6
