[bumpversion]
current_version = 0.5.0
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:docs/source/conf.py]
search = release = '{current_version}'
replace = release = '{new_version}'

[tool:pytest]
addopts = 
	--strict
	--tb=native
	--verbose
	tests/
python_files = test_*.py
markers = 
	online: mark test to need internet connection
	slow: mark test to be slow
