##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = {{ cookiecutter.project_dash_slug }}
##
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_short_description }}
long_description = {{ cookiecutter.project_short_description }}
author = Syapse, Inc.
author_email = noreply@syapse.com
url = https://github.com/syapse/{{ cookiecutter.project_dash_slug }}
license = Proprietary
classifiers =
  Intended Audience :: Developers
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
[options]
zip_safe = False
include_package_data = True
setup_requires =
  setuptools-scm
install_requires =
  six
  unittest-xml-reporting
  {%- if cookiecutter.command_line_interface|lower == 'click' %}Click>=6.0{%- endif %}

[options.extras_require]
dev = bumpversion

[mypy]
ignore_missing_imports = true

[pep8]
# Code Climate respects a pep8 section
max_line_length = 100

[flake8]
max_line_length = 100

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-rc(?P<rc>\d+))?
serialize =
        {major}.{minor}.{patch}-rc{rc}
        {major}.{minor}.{patch}

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
exclude = docs
