##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = {{ cookiecutter.project_dash_slug }}
##
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_short_description }}
long_description = {{ cookiecutter.project_short_description }}
author = Syapse, Inc.
author_email = noreply@syapse.com
url = https://github.com/syapse/{{ cookiecutter.project_dash_slug }}
license = Proprietary
classifiers =
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  {%- if cookiecutter.python_2_7|lower == 'yes' %}
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  {%- endif %}
[options]
zip_safe = False
include_package_data = True
setup_requires =
  setuptools-scm
install_requires =
  {%- if cookiecutter.python_2_7|lower == 'yes' %}
  six
  {%- endif %}
  {%- if cookiecutter.command_line_interface|lower == 'click' %}
  newrelic
  Click>=6.0
  {%- endif %}

[mypy]
ignore_missing_imports = true

[pep8]
# Code Climate respects a pep8 section
max_line_length = 100

[flake8]
max_line_length = 100
