[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
authors = [
    "UK Hydrographic Office <datascienceandengineering@ukho.gov.uk>"
]
description = "Python wrapper for the C implementation of the Generic Sensor Format library."
license = "MIT"
keywords = [
    "FIXME",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

homepage = "https://github.com/UKHO/{{ cookiecutter.project_slug }}"
repository = "https://github.com/UKHO/{{ cookiecutter.project_slug }}"

readme = "README.md"

# Do not manually edit, use poetry add/remove (--dev) to manage dependencies
[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
assertpy = "^1.0"
bandit = "^1.6.2"
black = "^19.10b0"
bump2version = "^1.0.0"
coverage = "^5.1"
flake8-isort = "^3.0.0"
flake8 = "^3.8.3"
liccheck = "^0.4.7"
pytest-cov = "^2.10.0"
pytest-runner = "^5.2"
pytest = "^5.4.3"
tox-gh-actions = "^1.2.0"
tox = "^3.15.2"
toml = "^0.10.1"
immutabledict = "^1.0.0"
mypy = "^0.780"
pytest-cases = "^1.16.0"
dataclasses = {version = "^0.7", python = ">=3.6,<3.7"}

[tool.pytest.ini_options]
addopts = "--cov=gsfpy --cov-fail-under=95"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"