[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[tool:pytest]
addopts =
        --strict
        --tb=native
        tests/
python_files = test_*.py
markers =
    online: mark test to need internet connection
    slow: mark test to be slow

[flake8]
ignore=F401,E402
max-line-length=120
exclude =
    src,
    tests,
    .git,
    __pycache__,
    docs,
    build,
    dist,
    bin,
    eggs,
    parts,
    examples,
    bootstrap-buildout.py,

[doc8]
ignore-path = docs/build,docs/source/_templates,docs/source/_static
max-line-length = 120
