{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[metadata]
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
name = {{ cookiecutter.project_slug }}
keywords = {{ cookiecutter.project_slug }}
description=
    {{ cookiecutter.project_short_description }}

long_description = file: README.md, HISTORY.md
long_description_content_type = markdown
{%- if cookiecutter.open_source_license in license_classifiers %}
license = {{ cookiecutter.open_source_license }}
{%- endif %}
license_files = LICENSE
classifiers =
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
{%- if cookiecutter.open_source_license in license_classifiers %}
        {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}
        Natural Language :: English
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
include_package_data = True
zip_safe = False

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
setup_requires =
    setuptools>=39.2.0
    setuptools_scm
    {%- if cookiecutter.use_pytest == 'y' %}
    pytest-runner
    {%- endif %}

test_requires =
    {%- if cookiecutter.use_pytest == 'y' %}
    pytest
    {%- endif %}

install_requires =
    {%- if cookiecutter.command_line_interface|lower == 'click' %}
    Click>=6.0
    {%- endif %}

[options.packages.find]
where=src

[options.extras_require]

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
{%- if cookiecutter.use_pytest == 'y' %}
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
{%- endif %}

