{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[metadata]
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
name = {{ cookiecutter.project_slug }}
keywords = {{ cookiecutter.project_slug }}
description= {{ cookiecutter.project_short_description }}
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
{%- if cookiecutter.open_source_license in license_classifiers %}
license = {{ cookiecutter.open_source_license }}
{%- endif %}
license_file = LICENSE
classifiers =
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
{%- if cookiecutter.open_source_license in license_classifiers %}
        {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}
        Natural Language :: English
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}
include_package_data = True
zip_safe = False

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
setup_requires =
    setuptools>=39.2.0
    setuptools_scm
    {%- if cookiecutter.use_pytest == 'y' %}
    pytest-runner
    {%- endif %}

test_requires =
    {%- if cookiecutter.use_pytest == 'y' %}
    pytest
    {%- endif %}

install_requires =
    {%- if cookiecutter.command_line_interface|lower == 'click' %}
    Click>=6.0
    {%- endif %}

[options.packages.find]
where=src

[options.extras_require]
docs =
    sphinx==2.0.1
    recommonmark>=0.5.0
    sphinx_rtd_theme==0.4.3
    numpydoc

{%- if cookiecutter.use_pytest == 'y' %}
tests =
    pytest
    pytest-runner
{%- endif %}

dev =
    %(docs)s
    {%- if cookiecutter.use_pytest == 'y' %}
    %(tests)s
    {%- endif %}
    bumpversion==0.5.3
    watchdog==0.9.0
    flake8==3.5.0
    tox==3.5.2
    coverage==4.5.1
    twine==1.13.0
    readme-renderer[md]==24.0

{% if 'no' not in cookiecutter.command_line_interface|lower -%}
[options.entry_points]
console_scripts =
    {{ cookiecutter.repo_name }} = {{ cookiecutter.project_slug }}.cli:main
{%- endif %}

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
{%- if cookiecutter.use_pytest == 'y' %}
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
{%- endif %}

